--- a/final/src/index.css
+++ b/final/src/index.css
@@ -1,5 +1,9 @@
 body {
 	margin: 0;
+	/* height: 100vh; */
+	justify-content: center;
+    justify-items: center;
+    display: flex;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
@@ -7,7 +11,9 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	background-color: lightblue !important;
 }
-
+.row{
+	justify-content: center
+}
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
